<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#110A21"
    tools:context=".Main"
    tools:layout_editor_absoluteY="81dp">

    <View
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium.Inverse"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/editText"
        style="@android:style/Widget.Holo.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginBottom="23dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:ems="15"
        android:inputType="textPersonName"
        android:text="@string/Name"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium.Inverse"
        android:textColor="#E1DBF8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_orange_light"
        android:ems="15"
        android:inputType="textEmailSubject"
        android:text="@string/Email"
        android:textColor="#E1DBF8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/gender"
        android:textColor="#E1DBF8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:buttonTint=" #ffffbb33"
        android:checked="true"
        android:text="@string/enable_pin"
        android:textColor="#E1DBF8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:buttonTint=" #ffffbb33"
        android:text="@string/disable_pin"
        android:textColor="#E1DBF8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:background="#ffffbb33"
        android:textColor="#110A21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

</android.support.constraint.ConstraintLayout>